--- a/fullstack_app/client/src/components/blocks/researcherBlock/ResearcherBlock.css
+++ b/fullstack_app/client/src/components/blocks/researcherBlock/ResearcherBlock.css
@@ -15,12 +15,12 @@
   
   .rightBlock {
     display: flex;
-    align-self: auto;
+    /* align-self: auto; */
     width: 33%;
     height: 100%;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
+    /* justify-content: left; */
+    align-items: flex-start;
   }
   
   .leftBlock {
