--- a/fullstack_app/client/src/components/views/researcher/Researcher.css
+++ b/fullstack_app/client/src/components/views/researcher/Researcher.css
@@ -1,10 +1,10 @@
-#researcherScroll {
+#documentScroll {
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     /* margin: 16px 0; */
     /* box-shadow: 3px 18px 20px rgba(0, 0, 0, .24); */
     background: white;
-    height: 61vh;
+    height: 60vh;
     overflow-y: scroll;
     /* border-radius: 6px; */
     z-index: 10;
